--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "updateGoldens": "cross-env UPDATE_GOLDENS=true pnpm test"
   },
   "devDependencies": {
+    "@trpc/server": "^11.1.0",
     "@types/node": "^22.14.1",
     "@typescript-eslint/eslint-plugin": "^8.31.0",
     "@typescript-eslint/parser": "^8.31.0",
@@ -51,7 +52,8 @@
   "dependencies": {
     "@rljson/hash": "^0.0.13",
     "@rljson/json": "^0.0.18",
-    "@rljson/rljson": "^0.0.39"
+    "@rljson/rljson": "^0.0.39",
+    "@trpc/client": "^11.1.0"
   },
   "pnpm": {
     "onlyBuiltDependencies": [
