--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,13 +1,51 @@
+// {
+//   // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
+//   "version": "0.2.0",
+//   "configurations": [
+//     {
+//       "name": "Run Current Script",
+//       "type": "node",
+//       "request": "launch",
+//       "program": "${file}",
+//       "console": "integratedTerminal"
+//     }
+//   ]
+// }
+
 {
-  // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
   "version": "0.2.0",
   "configurations": [
     {
-      "name": "Run Current Script",
       "type": "node",
       "request": "launch",
-      "program": "${file}",
-      "console": "integratedTerminal"
+      "name": "Launch with Nodemon",
+      "runtimeExecutable": "${workspaceFolder}/node_modules/.bin/nodemon",
+      "program": "${workspaceFolder}/app.js",
+      "restart": true,
+      "console": "integratedTerminal",
+      "internalConsoleOptions": "neverOpen"
+    },
+    {
+      "name": "Debug Server",
+      "type": "node",
+      "request": "launch",
+      "runtimeExecutable": "npx",
+      "runtimeArgs": ["vite-node"],
+      "args": ["${workspaceFolder}/src/server/api.ts"],
+      "cwd": "${workspaceFolder}",
+      "console": "integratedTerminal",
+      "internalConsoleOptions": "neverOpen"
+    },
+    {
+      "name": "Debug Client",
+      "type": "node",
+      "request": "launch",
+      "runtimeExecutable": "npx",
+      "runtimeArgs": ["vite-node"],
+      "args": ["${workspaceFolder}/src/client/index.ts"],
+      "cwd": "${workspaceFolder}",
+      "console": "integratedTerminal",
+      "internalConsoleOptions": "neverOpen"
     }
   ]
 }
