--- a/package.json
+++ b/package.json
@@ -13,12 +13,11 @@
     "type": "git",
     "url": "git+https://github.com/rljson/template-project.git"
   },
-  "main": "dist/template-project.js",
+  "main": "src/server/api.ts",
   "types": "dist/index.d.ts",
   "files": [
     "dist"
   ],
-  "type": "module",
   "scripts": {
     "build": "pnpx vite build && tsc && node scripts/copy-readme-to-dist.js",
     "test": "pnpx vitest run --coverage && pnpm run lint",
@@ -28,7 +27,8 @@
     "updateGoldens": "cross-env UPDATE_GOLDENS=true pnpm test"
   },
   "devDependencies": {
-    "@trpc/server": "^11.1.0",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^5.0.1",
     "@types/node": "^22.14.1",
     "@typescript-eslint/eslint-plugin": "^8.31.0",
     "@typescript-eslint/parser": "^8.31.0",
@@ -39,7 +39,9 @@
     "eslint-plugin-tsdoc": "^0.4.0",
     "globals": "^16.0.0",
     "jsdoc": "^4.0.4",
+    "nodemon": "^3.1.9",
     "read-pkg": "^9.0.1",
+    "ts-node": "^10.9.2",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.31.0",
     "vite": "^6.3.2",
@@ -53,7 +55,12 @@
     "@rljson/hash": "^0.0.13",
     "@rljson/json": "^0.0.18",
     "@rljson/rljson": "^0.0.39",
-    "@trpc/client": "^11.1.0"
+    "@trpc/client": "^11.1.0",
+    "@trpc/server": "^11.1.0",
+    "cors": "^2.8.5",
+    "express": "^5.1.0",
+    "superjson": "^2.2.2",
+    "zod": "^3.24.3"
   },
   "pnpm": {
     "onlyBuiltDependencies": [
