--- a/package.json
+++ b/package.json
@@ -35,16 +35,16 @@
     "@vitest/coverage-v8": "^3.1.2",
     "cross-env": "^7.0.3",
     "eslint": "^9.25.1",
-    "eslint-plugin-jsdoc": "^50.6.9",
+    "eslint-plugin-jsdoc": "^50.6.10",
     "eslint-plugin-tsdoc": "^0.4.0",
     "globals": "^16.0.0",
     "jsdoc": "^4.0.4",
-    "nodemon": "^3.1.9",
+    "nodemon": "^3.1.10",
     "read-pkg": "^9.0.1",
     "ts-node": "^10.9.2",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.31.0",
-    "vite": "^6.3.2",
+    "vite": "^6.3.3",
     "vite-node": "^3.1.2",
     "vite-plugin-dts": "^4.5.3",
     "vite-tsconfig-paths": "^5.1.4",
@@ -53,10 +53,11 @@
   },
   "dependencies": {
     "@rljson/hash": "^0.0.13",
+    "@rljson/io": "^0.0.21",
     "@rljson/json": "^0.0.18",
     "@rljson/rljson": "^0.0.39",
-    "@trpc/client": "^11.1.0",
-    "@trpc/server": "^11.1.0",
+    "@trpc/client": "^11.1.1",
+    "@trpc/server": "^11.1.1",
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "superjson": "^2.2.2",
