--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@rljson/hash": "^0.0.13",
     "@rljson/io": "^0.0.21",
     "@rljson/io-sqlite": "^0.0.8",
+    "@rljson/is-ready": "^0.0.17",
     "@rljson/json": "^0.0.18",
     "@rljson/rljson": "^0.0.39",
     "@trpc/client": "^11.1.1",
