--- a/package.json
+++ b/package.json
@@ -29,44 +29,45 @@
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.1",
-    "@types/node": "^22.14.1",
-    "@typescript-eslint/eslint-plugin": "^8.31.0",
-    "@typescript-eslint/parser": "^8.31.0",
-    "@vitest/coverage-v8": "^3.1.2",
+    "@types/node": "^22.15.14",
+    "@typescript-eslint/eslint-plugin": "^8.32.0",
+    "@typescript-eslint/parser": "^8.32.0",
+    "@vitest/coverage-v8": "^3.1.3",
     "cross-env": "^7.0.3",
-    "eslint": "^9.25.1",
-    "eslint-plugin-jsdoc": "^50.6.10",
+    "eslint": "^9.26.0",
+    "eslint-plugin-jsdoc": "^50.6.11",
     "eslint-plugin-tsdoc": "^0.4.0",
-    "globals": "^16.0.0",
+    "globals": "^16.1.0",
     "jsdoc": "^4.0.4",
     "nodemon": "^3.1.10",
     "read-pkg": "^9.0.1",
     "ts-node": "^10.9.2",
     "typescript": "~5.8.3",
-    "typescript-eslint": "^8.31.0",
-    "vite": "^6.3.3",
-    "vite-node": "^3.1.2",
+    "typescript-eslint": "^8.32.0",
+    "vite": "^6.3.5",
+    "vite-node": "^3.1.3",
     "vite-plugin-dts": "^4.5.3",
     "vite-tsconfig-paths": "^5.1.4",
-    "vitest": "^3.1.2",
+    "vitest": "^3.1.3",
     "vitest-dom": "^0.1.1"
   },
   "dependencies": {
-    "@rljson/hash": "^0.0.13",
-    "@rljson/io": "^0.0.21",
-    "@rljson/io-sqlite": "^0.0.8",
+    "@rljson/hash": "^0.0.15",
+    "@rljson/io": "^0.0.28",
+    "@rljson/io-sqlite": "^0.0.9",
     "@rljson/is-ready": "^0.0.17",
-    "@rljson/json": "^0.0.18",
-    "@rljson/rljson": "^0.0.39",
-    "@trpc/client": "^11.1.1",
-    "@trpc/server": "^11.1.1",
+    "@rljson/json": "^0.0.21",
+    "@rljson/rljson": "^0.0.50",
+    "@trpc/client": "^11.1.2",
+    "@trpc/server": "^11.1.2",
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "superjson": "^2.2.2",
-    "zod": "^3.24.3"
+    "zod": "^3.24.4"
   },
   "pnpm": {
     "onlyBuiltDependencies": [
+      "better-sqlite3",
       "esbuild"
     ]
   },
