--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "eslint": "^9.26.0",
     "eslint-plugin-jsdoc": "^50.6.11",
     "eslint-plugin-tsdoc": "^0.4.0",
+    "get-port": "^7.1.0",
     "globals": "^16.1.0",
     "jsdoc": "^4.0.4",
     "nodemon": "^3.1.10",
