--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "files": [
     "dist"
   ],
+  "type": "module",
   "scripts": {
     "build": "pnpx vite build && tsc && node scripts/copy-readme-to-dist.js",
     "test": "pnpx vitest run --coverage && pnpm run lint",
@@ -29,7 +30,7 @@
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.1",
-    "@types/node": "^22.15.14",
+    "@types/node": "^22.15.16",
     "@typescript-eslint/eslint-plugin": "^8.32.0",
     "@typescript-eslint/parser": "^8.32.0",
     "@vitest/coverage-v8": "^3.1.3",
