create io-client (#2)
* update dependencies

* add trpc dependency

* client test successful

* enhanced client tests

* clean-up with all current tests running

* iterable function included

* beauty

* basic router maps to instance of io

* basic - unfinished - implementation of io interface

* test created - createTable does not work

* create context outside of initialization

* all tests are running

* smaller fixes for build

* changes implemented

* added goldens to tests

* tests are running only in test

* Fix CONNECTION error

* minor change

* Update dependencies

* Update package manager

* Make copying conformance tests more easy

* Increase version

---------

Co-authored-by: Jan Balzer <j.balzer@carat.de>

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,13 +1,29 @@
 {
-  // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
   "version": "0.2.0",
   "configurations": [
     {
-      "name": "Run Current Script",
+      "name": "Debug Server",
       "type": "node",
       "request": "launch",
-      "program": "${file}",
-      "console": "integratedTerminal"
+      "runtimeExecutable": "npx",
+      "runtimeArgs": ["vite-node"],
+      "args": ["${workspaceFolder}/src/server/api.ts"],
+      "cwd": "${workspaceFolder}",
+      "console": "integratedTerminal",
+      "skipFiles": ["<node_internals>/**", "**/*.mjs"], // Keep Node.js internals skipped
+      "internalConsoleOptions": "neverOpen"
+    },
+    {
+      "name": "Debug Client",
+      "type": "node",
+      "request": "launch",
+      "runtimeExecutable": "npx",
+      "runtimeArgs": ["vite-node"],
+      "args": ["${workspaceFolder}/src/client/index.ts"],
+      "cwd": "${workspaceFolder}",
+      "console": "integratedTerminal",
+      "skipFiles": ["<node_internals>/**", "**/*.mjs"], // Keep Node.js internals skipped
+      "internalConsoleOptions": "neverOpen"
     }
   ]
 }
