--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@rljson/template-project",
-  "version": "0.0.13",
+  "version": "0.0.14",
   "description": "Rljson template-project description",
   "homepage": "https://github.com/rljson/template-project",
   "bugs": "https://github.com/rljson/template-project/issues",
@@ -13,7 +13,7 @@
     "type": "git",
     "url": "git+https://github.com/rljson/template-project.git"
   },
-  "main": "dist/template-project.js",
+  "main": "src/server/api.ts",
   "types": "dist/index.d.ts",
   "files": [
     "dist"
@@ -28,35 +28,50 @@
     "updateGoldens": "cross-env UPDATE_GOLDENS=true pnpm test"
   },
   "devDependencies": {
-    "@types/node": "^22.13.11",
-    "@typescript-eslint/eslint-plugin": "^8.27.0",
-    "@typescript-eslint/parser": "^8.27.0",
-    "@vitest/coverage-v8": "^3.0.9",
+    "@types/cors": "^2.8.18",
+    "@types/express": "^5.0.1",
+    "@types/node": "^22.15.17",
+    "@typescript-eslint/eslint-plugin": "^8.32.0",
+    "@typescript-eslint/parser": "^8.32.0",
+    "@vitest/coverage-v8": "^3.1.3",
     "cross-env": "^7.0.3",
-    "eslint": "^9.23.0",
-    "eslint-plugin-jsdoc": "^50.6.8",
+    "eslint": "^9.26.0",
+    "eslint-plugin-jsdoc": "^50.6.11",
     "eslint-plugin-tsdoc": "^0.4.0",
-    "globals": "^16.0.0",
+    "get-port": "^7.1.0",
+    "globals": "^16.1.0",
     "jsdoc": "^4.0.4",
+    "nodemon": "^3.1.10",
     "read-pkg": "^9.0.1",
-    "typescript": "~5.8.2",
-    "typescript-eslint": "^8.27.0",
-    "vite": "^6.2.2",
-    "vite-node": "^3.0.9",
+    "ts-node": "^10.9.2",
+    "typescript": "~5.8.3",
+    "typescript-eslint": "^8.32.0",
+    "vite": "^6.3.5",
+    "vite-node": "^3.1.3",
     "vite-plugin-dts": "^4.5.3",
     "vite-tsconfig-paths": "^5.1.4",
-    "vitest": "^3.0.9",
+    "vitest": "^3.1.3",
     "vitest-dom": "^0.1.1"
   },
   "dependencies": {
-    "@rljson/hash": "^0.0.12",
-    "@rljson/json": "^0.0.18",
-    "@rljson/rljson": "^0.0.21"
+    "@rljson/hash": "^0.0.15",
+    "@rljson/io": "^0.0.30",
+    "@rljson/io-sqlite": "^0.0.9",
+    "@rljson/is-ready": "^0.0.17",
+    "@rljson/json": "^0.0.21",
+    "@rljson/rljson": "^0.0.50",
+    "@trpc/client": "^11.1.2",
+    "@trpc/server": "^11.1.2",
+    "cors": "^2.8.5",
+    "express": "^5.1.0",
+    "superjson": "^2.2.2",
+    "zod": "^3.24.4"
   },
   "pnpm": {
     "onlyBuiltDependencies": [
+      "better-sqlite3",
       "esbuild"
     ]
   },
-  "packageManager": "pnpm@10.6.4+sha512.da3d715bfd22a9a105e6e8088cfc7826699332ded60c423b14ec613a185f1602206702ff0fe4c438cb15c979081ce4cb02568e364b15174503a63c7a8e2a5f6c"
+  "packageManager": "pnpm@10.10.0"
 }
