Work in progress

--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
   },
   "dependencies": {
     "@rljson/hash": "^0.0.15",
-    "@rljson/io": "^0.0.30",
+    "@rljson/io": "link:../io",
     "@rljson/io-sqlite": "^0.0.9",
     "@rljson/is-ready": "^0.0.17",
     "@rljson/json": "^0.0.21",
@@ -71,7 +71,10 @@
     "onlyBuiltDependencies": [
       "better-sqlite3",
       "esbuild"
-    ]
+    ],
+    "overrides": {
+      "@rljson/io": "link:../io"
+    }
   },
   "packageManager": "pnpm@10.10.0"
 }
