--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,29 +1,14 @@
 {
+  // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
   "version": "0.2.0",
   "configurations": [
     {
-      "name": "Debug Server",
+      "name": "Run Current Script",
       "type": "node",
       "request": "launch",
-      "runtimeExecutable": "npx",
-      "runtimeArgs": ["vite-node"],
-      "args": ["${workspaceFolder}/src/server/api.ts"],
-      "cwd": "${workspaceFolder}",
+      "program": "${file}",
       "console": "integratedTerminal",
-      "skipFiles": ["<node_internals>/**", "**/*.mjs"], // Keep Node.js internals skipped
-      "internalConsoleOptions": "neverOpen"
-    },
-    {
-      "name": "Debug Client",
-      "type": "node",
-      "request": "launch",
-      "runtimeExecutable": "npx",
-      "runtimeArgs": ["vite-node"],
-      "args": ["${workspaceFolder}/src/client/index.ts"],
-      "cwd": "${workspaceFolder}",
-      "console": "integratedTerminal",
-      "skipFiles": ["<node_internals>/**", "**/*.mjs"], // Keep Node.js internals skipped
-      "internalConsoleOptions": "neverOpen"
+      "args": []
     }
   ]
 }
