--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
   },
   "dependencies": {
     "@rljson/hash": "^0.0.15",
-    "@rljson/io": "link:../io",
+    "@rljson/io": "^0.0.30",
     "@rljson/io-sqlite": "^0.0.9",
     "@rljson/is-ready": "^0.0.17",
     "@rljson/json": "^0.0.21",
@@ -72,9 +72,7 @@
       "better-sqlite3",
       "esbuild"
     ],
-    "overrides": {
-      "@rljson/io": "link:../io"
-    }
+    "overrides": {}
   },
   "packageManager": "pnpm@10.10.0"
 }
