--- a/package.json
+++ b/package.json
@@ -71,7 +71,8 @@
     "onlyBuiltDependencies": [
       "better-sqlite3",
       "esbuild"
-    ]
+    ],
+    "overrides": {}
   },
   "packageManager": "pnpm@10.10.0"
 }
