--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@rljson/template-project",
-  "version": "0.0.14",
+  "version": "0.0.15",
   "description": "Rljson template-project description",
   "homepage": "https://github.com/rljson/template-project",
   "bugs": "https://github.com/rljson/template-project/issues",
@@ -56,7 +56,7 @@
   },
   "dependencies": {
     "@rljson/hash": "^0.0.15",
-    "@rljson/io": "link:../io",
+    "@rljson/io": "^0.0.31",
     "@rljson/io-sqlite": "^0.0.9",
     "@rljson/is-ready": "^0.0.17",
     "@rljson/json": "^0.0.21",
@@ -73,9 +73,7 @@
       "better-sqlite3",
       "esbuild"
     ],
-    "overrides": {
-      "@rljson/io": "link:../io"
-    }
+    "overrides": {}
   },
   "packageManager": "pnpm@10.10.0"
 }
